Added storm017 data from wxforum

--- a/acurite-6045-lightning/rct-data/lightning-breakdown-1.ipynb
+++ b/acurite-6045-lightning/rct-data/lightning-breakdown-1.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "The data was extracted from the logfiles with the following quick and dirty command line to distill just the state changes.  \n",
     "\n",
-    "@todo - should just do this from the logs in Python/Pandas\n",
+    "@todo - should extract records with changes in Python/Pandas\n",
     "\n",
     "```\n",
     "$ (gzip -dc out-whb-rpi-20180*gz ; cat out-whb-rpi-20180*txt ) | \\\n",
